Fixed layout issues, database leaks, reworked background check logic

--- a/app/src/main/res/layout/fragment_calendar_list.xml
+++ b/app/src/main/res/layout/fragment_calendar_list.xml
@@ -18,9 +18,10 @@
     <TextView
         android:id="@+id/calendarEmptyView"
         android:textSize="50dp"
+        android:gravity="center"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/empty_list"
+        android:text="No Events Found"
         />
 </RelativeLayout>
